[gd_scene load_steps=8 format=3 uid="uid://cpgyklq3rebd"]

[ext_resource type="Script" path="res://player/player.gd" id="1_e2lnn"]
[ext_resource type="PackedScene" uid="uid://ucynq304lagp" path="res://art/player.glb" id="2_7smq1"]
[ext_resource type="Animation" uid="uid://bripyrc31rqjr" path="res://art/float.res" id="3_qf063"]

[sub_resource type="SphereShape3D" id="SphereShape3D_y7i71"]
margin = 0.0
radius = 0.8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6lyo5"]
height = 0.236328
radius = 0.655645

[sub_resource type="Animation" id="Animation_jhs08"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/charactor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/charactor:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k5i7a"]
_data = {
"RESET": SubResource("Animation_jhs08"),
"float": ExtResource("3_qf063")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
collision_mask = 6
script = ExtResource("1_e2lnn")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)

[node name="charactor" parent="Pivot" instance=ExtResource("2_7smq1")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
shape = SubResource("SphereShape3D_y7i71")

[node name="MobDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MobDetector"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.575651, 0)
shape = SubResource("CylinderShape3D_6lyo5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
libraries = {
"": SubResource("AnimationLibrary_k5i7a")
}

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
